# sap-elospheres-audiovisual-test

./: .gitignore  INSTALL_openmha.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  seat-versionless.yml  seat.yml  start_all.ps1  start_jacktrip_server_and_tascar_on_wsl2.ps1  start_jacktrip_windows_sink.ps1  start_tascar_on_wsl2.ps1
.github/workflows/: ci.yml  test.yml
seat/: gui.py  gui.spec  make_lists.sh  seat-gui.spec  seat.py  setup_jacktrip_wsl.py  start_jacktrip_wsl.py  stop_jacktrip_wsl.py  test_avrenderercontrol.py  test_fixedprobelevel.py  test_jacktripcontrol.py  test_pysimplegui.py
seat/avrenderercontrol/: __init__.py  av_renderer_control.py  avrenderercontrol.py  config_default.yaml  lep_tascar_osc.py  mha_cli.py  osc_tascar_wsl.py  stub_for_tests.py  tascar_cli.py
seat/config/: config_default.yaml
seat/demo_tests/: test_01_targettoneinnoise.py  test_02_targetspeechtwomaskers.py  test_03_targetspeechtwomaskers_v2_mac.py  test_03_targetspeechtwomaskers_v2_wsl.py  test_04_3av_2ao_mac.py  test_04_3av_2ao_wsl.py  test_04_mha_3av_2ao_mac.py  test_04_mha_3av_2ao_wsl.py  test_04_mha_adaptivedoa_3av_2ao_mac.py  test_04_mha_adaptivedoa_3av_2ao_wsl.py
seat/jacktripcontrol/: __init__.py  __main__.py  config_default.yaml  connect_jacktrip_receive_to_soundcard.ps1  disconnect_jacktrip_receive_from_soundcard.ps1  gui.py  init_env.ps1  jacktripcontrol.py  kill_wsl.ps1  start_local.ps1  start_wsl.ps1  test_metronome.ps1
seat/loggedprocess/: __init__.py  logged_process.py
seat/manual_tests/: README.md  send_osc_video_position.py  (+19 more)
(+98 files in other folders)
